--- a/Basic.html
+++ b/Basic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic html Coding Test </title>
 </head>
 <body bgcolor="darkgreen">
     <h1 align="center">
@@ -42,3 +42,4 @@
     </h2>
 </body>
 </html>
+
